2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/fmp4/fmp4.py:
	Remove unused imports

2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Fix preroll calculation using the DVR window length

2011-05-09  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Check that all streams have enough fragments before setting the
	mood to happy

2011-04-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Add more checks to the smooth streamer in case the sps/pps are not 
	set in the track or if we receive fragments with an unknown id

2011-04-05  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	Added the property hls-url that will be the base url used to render
	the playlist entries.

2011-04-05  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* configure.ac:
	* flumotion/component/Makefile.am:
	* flumotion/component/plugs (added):
	* flumotion/component/plugs/multibitrate (added):
	* flumotion/component/plugs/multibitrate/multibitrate.xml (added):
	* flumotion/component/plugs/multibitrate/__init__.py (added):
	* flumotion/component/plugs/multibitrate/Makefile.am (added):
	* flumotion/component/plugs/multibitrate/multibitrate.py (added):
	* flumotion/component/plugs/__init__.py (added):
	* flumotion/component/plugs/Makefile.am (added):
	Added a plug that renders m3u8 playlist for iphone multibitrate.

2011-02-15  Xavier Francisco  <xfrancisco@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Stopping the appsink when there's a version mismatch in mp4seek.
	See #12915
 	