@@ -1,6 +1,11 @@
 2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/muxers/fmp4/fmp4.py:
+	Fix sychronisation issues between video streams
+
+2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/muxers/fmp4/fmp4.py:
 	Remove unused imports
 
 2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>
